add redis cache service

--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -7,11 +7,11 @@ events {
 http {
     sendfile on;
 
-    upstream shorten_service {
+    upstream shorten_backend {
         server shorten_service:8000;
     }
 
-    upstream redirect_service {
+    upstream redirect_backend {
         server redirect_service:8001;
     }
 
@@ -19,13 +19,13 @@ http {
         listen 80;
 
         location /shorten {
-            proxy_pass http://shorten_service;
+            proxy_pass http://shorten_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
         location / {
-            proxy_pass http://redirect_service;
+            proxy_pass http://redirect_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
