--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -4,7 +4,7 @@ x-cassandra-env: &cassandra-env
   CASSANDRA_CLUSTER_NAME: Url_Shortener
   CASSANDRA_DC: datacenter1
   CASSANDRA_RACK: rack1
-  CASSANDRA_NUM_TOKENS: 128
+  CASSANDRA_NUM_TOKENS: 16
 
 x-cassandra-common: &cassandra-common
   image: cassandra:latest
@@ -28,14 +28,11 @@ services:
 
   shorten_service:
     build: ./shorten_service
-    command: sh -c "python app/migration_runner.py && uvicorn app.main:app --host 0.0.0.0 --port 8000"
-    container_name: shorten_service
+    command: sh -c "python -m app.db.bootstrap && uvicorn app.main:app --host 0.0.0.0 --port 8000"
     volumes:
       - ./shorten_service:/app
     networks:
       - url_net
-    ports:
-      - "8000:8000"
     depends_on:
       cassandra-node:
         condition: service_healthy
@@ -48,7 +45,6 @@ services:
 
   redirect_service:
     build: ./redirect_service
-    container_name: redirect_service
     networks:
       - url_net
     depends_on:
@@ -77,7 +73,10 @@ services:
   redis:
     image: redis:latest
     container_name: redis_db
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
     restart: unless-stopped
+    volumes:
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
     networks:
       - url_net
 
