--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -17,6 +17,14 @@ http {
 
     server {
         listen 80;
+        location /nginx_status {
+            stub_status;
+
+            access_log off;
+            allow 127.0.0.1;
+            allow 172.16.0.0/12; 
+            deny all;
+        }
 
         location /shorten {
             proxy_pass http://shorten_backend;
