--- a/prometheus.yml
+++ b/prometheus.yml
@@ -17,9 +17,12 @@ scrape_configs:
 
   - job_name: "redis"
     static_configs:
-      - targets: ["redis:9121"]
+      - targets: ["redis-exporter:9121"]
   
   - job_name: "cassandra"
-    scrape_interval: 60s
     static_configs:
       - targets: ["cassandra-exporter:8080"]
+
+  - job_name: "cadvisor"
+    static_configs:
+      - targets: ["cadvisor:8080"]
